--- a/src/charts/index.html
+++ b/src/charts/index.html
@@ -6,10 +6,7 @@
     </head>
     <body>
         <script src="scripts.js"></script>
-        <div class="chartWithOverlay">
-            <div id="chart_div" style="width: 900px; height: 500px;"></div>
-            <div class="overlay">
-            </div>
+        <div class="charts">
         </div>
     </body>
 </html>
