--- a/src/charts/index.html
+++ b/src/charts/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <script src="scripts.js"></script>
+        <div>
+            <a href="..">Back</a>
+        </div>
         <div class="charts">
         </div>
     </body>
